Broken CSS fix and readmore

--- a/app/stylesheets/actwitty/alpha/home_layout.scss
+++ b/app/stylesheets/actwitty/alpha/home_layout.scss
@@ -1346,7 +1346,7 @@ ul.p-fltr-tag-list li
   height:auto;
   width:100%;
   width:550px;
-  border:0px solid yellow;
+  border:0px solid blue;
   margin-top:8px;
   margin-left:10px;
   padding:10px;
@@ -1357,7 +1357,6 @@ ul.p-fltr-tag-list li
 {
   width:100%;
   height:80px;
-  float:right;
   display:block;
   border:0px solid red;
   overflow:hidden;
@@ -1371,17 +1370,20 @@ ul.p-fltr-tag-list li
 
 }
 
-.p-awp-close
+div.p-awp-close
 {
   width:100%;
-  float:right;
-  float:top;
+  /*float:right;
+  float:top;*/
+  height:25px;
+  border:0px solid red;
+
 }
 
-.p-awp-close input
+div.p-awp-close input
 {
   float:right;
-  float:top;
+  /*float:top;*/
 }
 
 
@@ -1390,6 +1392,7 @@ ul.p-fltr-tag-list li
   width:100%;
   height:30px;
   border:0px solid red;
+  margin-top:4px;
 }
 
 .p-awp-channel-desc
@@ -1420,7 +1423,7 @@ ul.p-fltr-tag-list li
 .p-awp-subtitle-name
 {
   float:right;
-  font-size:21px;
+  font-size:16px;
   padding:3px;
   font-weight:bold;
   color:#333;
@@ -1431,7 +1434,7 @@ ul.p-fltr-tag-list li
   width:100%;
   height:20px;
   margin-top:5px;
-  float:right;
+  /*float:right;*/
   border:0px solid green;
 }
 .p-awp-time-content
@@ -1444,6 +1447,7 @@ ul.p-fltr-tag-list li
   width:100%;
   height:20px;
   border:0px solid blue;
+  margin-top:4px;
 }
 .p-awp-date-content
 {
@@ -1454,7 +1458,7 @@ ul.p-fltr-tag-list li
 .p-awp-content
 {
   width:100%;
-  float:right;
+  /*float:right;*/
   height:auto;
   border:0px solid red;
 }
